# pytorch_gum_uncertainty_propagation

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  INSTALL.md  LICENSE  README.md  all-requirements.txt  dev-requirements.txt  docs-requirements.txt  examples-requirements.txt  extras-requirements.txt  pyproject.toml  release-requirements.txt  requirements.txt
docs/: Examples.rst  GUM_compliant_neural_network_uncertainty_propagation.activations.rst  conf.py  examples.rst  gum_compliant_neural_network_uncertainty_propagation.activations.rst  gum_compliant_neural_network_uncertainty_propagation.functionals.rst  gum_compliant_neural_network_uncertainty_propagation.modules.rst  gum_compliant_neural_network_uncertainty_propagation.uncertainties.rst  index.rst  propagation.rst  pytorch_gum_uncertainty_propagation.examples.propagate.rst  pytorch_gum_uncertainty_propagation.examples.uncertain_quadlu_propagate.rst  pytorch_gum_uncertainty_propagation.examples.zema_dataset.rst  pytorch_gum_uncertainty_propagation.functionals.rst  pytorch_gum_uncertainty_propagation.modules.rst  pytorch_gum_uncertainty_propagation.uncertainties.rst  pytorch_gum_uncertainty_propagation.zema_dataset.rst
src/GUM_compliant_neural_network_uncertainty_propagation/: activations.py  mnist_example.ipynb  propagation.ipynb
src/GUM_compliant_neural_network_uncertainty_propagation/examples/: imagenet_example.ipynb
src/gum_compliant_neural_network_uncertainty_propagation/: activations.py  functionals.py  modules.py  uncertainties.py
src/gum_compliant_neural_network_uncertainty_propagation/examples/: mnist_mlp.pt  read_dataset.ipynb
src/pytorch_gum_uncertainty_propagation/: functionals.py  modules.py  uncertainties.py  zema_dataset.py
src/pytorch_gum_uncertainty_propagation/datasets/: .gitkeep
src/pytorch_gum_uncertainty_propagation/examples/: gum_quadlu_propagate.py  plots.ipynb  propagate.py  read_dataset.ipynb  uncertain_quadlu_propagate.py  zema_dataset.py
tests/: conftest.py  test_activations.py  test_functionals.py  test_gum_quadlu_propagate.py  test_modules.py  test_propagate.py  test_uncertain_quadlu_propagate.py  test_uncertainties.py  test_zema_dataset.py
tests/test_modules/: conftest.py  test_gum_mlp.py  test_gum_sigmoid.py  test_gum_sigmoid_mlp.py  test_gum_softplus.py  test_gum_softplus_mlp.py  test_modules.py  test_modules_docstring.py  test_quadlu.py  test_quadlu_mlp.py  test_uncertain_linear.py  test_uncertain_quadlu.py  test_uncertain_quadlu_mlp.py
tests/test_propagate/: test_propagate.py
