[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gum_compliant_neural_network_uncertainty_propagation"
description = """
This package accompanies my Master's thesis on GUM-compliant uncertainty propagation\
and provides an implementation for fully-connected, feed-forward, deep neural networks\
using PyTorch.\
"""
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "uncertainty propagation",
    "GUM",
    "neural networks",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
version="0.1.0"
dependencies = [
    "h5py",
    "matplotlib",
    "pillow",
    "torch",
    "torchvision",
    "torchaudio",
]
[license]
text = "MIT"
file = "LICENSE"

[project.optional-dependencies]
examples = [
    "ipywidgets",
    "jupyter_nbextensions_configurator",
    "notebook",
    "tqdm",
]
dev = [
    "black[jupyter]",
    "hypothesis[numpy]",
    "mypy",
    "pylint",
    "pytest",
    "pytest-custom-exit-code",
]
docs = [
    "nbsphinx",
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]
release = [
    "python-semantic-release",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers --suppress-no-test-exit-code"
filterwarnings = "error"

[tool.mypy]
scripts_are_modules = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = "ignore-without-code"
strict = true
# TODO: Remove this once pytest has annotations
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
major_on_zero = false
changelog_sections = "feature,fix,breaking,documentation,performance"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"
upload_to_repository = false
upload_to_release = true
hvcs = "gitlab"
hvcs_domain = "gitlab1.ptb.de"

[tool.pylint.typecheck]
# List of members which are set dynamically and missed by pylint inference
# system, and so shouldn't trigger E1101 when accessed. Python regular
# expressions are accepted.
generated-members = "torch.*"
